[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/ScreenDisolver.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/sign-read.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/PixelFont.tres" type="DynamicFont" id=4]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SignPanel" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignLabel" type="Label" parent="SignPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 9.0
margin_right = 30.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 23 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "Some text"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoPanel" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 21.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.780392, 0.941176, 0.847059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="InfoPanel/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
color = Color( 0.262745, 0.321569, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="InfoPanel/ColorRect/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenDissolver" parent="." instance=ExtResource( 2 )]

[node name="ScorePanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CongratulationsLabel" type="Label" parent="ScorePanel"]
margin_top = 5.0
margin_right = 84.0
margin_bottom = 11.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "Thanks for playing!"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="ScorePanel"]
margin_top = 16.0
margin_right = 33.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "Time:"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeValue" type="Label" parent="ScorePanel"]
margin_left = 37.0
margin_top = 16.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "10:12"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathLabel" type="Label" parent="ScorePanel"]
margin_top = 24.0
margin_right = 33.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "Deaths:"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathValue" type="Label" parent="ScorePanel"]
margin_left = 37.0
margin_top = 24.0
margin_right = 84.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "23"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankLabel" type="Label" parent="ScorePanel"]
margin_top = 35.0
margin_right = 33.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "Rank:"
align = 2
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankValue" type="Label" parent="ScorePanel"]
margin_left = 37.0
margin_top = 35.0
margin_right = 84.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.780392, 0.941176, 0.847059, 1 )
text = "NOVICE"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
